# fullstack-rust

./: README.md
blog-actix/: .env  Cargo.toml  README.md  blog
blog-actix/migrations/2021-01-10-112314_create_users/: up.sql
blog-actix/migrations/2021-01-10-112538_index_username/: down.sql  up.sql
blog-actix/migrations/2021-03-07-124450_create_posts/: up.sql
blog-actix/migrations/2021-03-07-142429_create_comments/: up.sql
blog-actix/src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
blog-actix/src/routes/: comments.rs  posts.rs  users.rs
messages-actix/: Cargo.toml  README.md
messages-actix/src/: lib.rs  main.rs
wasm/: README.md
wasm/do-addition/: Cargo.toml  build.sh  serve.py
wasm/do-addition/src/: lib.rs
wasm/do-addition/www/: do_addition.wasm  index.html
wasm/do-nothing/: Cargo.toml
wasm/hello-bindgen/: README.md
wasm/hello-bindgen/hello-bindgen-app/: index.js  package-lock.json  package.json
wasm/hello-raw/: Cargo.toml  build.sh
wasm/hello-raw/src/: lib.rs
wasm/hello-raw/www/: hello_raw.wasm  index.html
