[package]
name = "blog-actix"
version = "0.1.0"
authors = ["mhmmdd <mhmmd.dd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

libsqlite3-sys = { version = "^0", features = ["bundled"] }
diesel = { version = "^1.4.5", features = ["sqlite", "r2d2"] }
dotenv = "0.10"